--- a/2.train_cls.ipynb
+++ b/2.train_cls.ipynb
@@ -2,34 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "58e4f06d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['S__:6950=二七八〇二七八〇二七八〇二七八〇〇E',\n",
-       " 'S__:6290=wtqywtqywtqywtqypE',\n",
-       " 'S__:4457=quiwouiwouiwouiwiE',\n",
-       " 'S__:9794=39179917991799176E',\n",
-       " 'S__:7442=wouupouupouupouyiE',\n",
-       " 'S__:3934=壹伍柒叁柒伍柒叁柒伍柒叁柒伍柒叁陆E',\n",
-       " 'S__:4719=壹捌捌柒柒捌捌柒柒捌捌柒柒捌捌柒陆E',\n",
-       " 'S__:8105=ewrwewrwewrwewrwpE',\n",
-       " 'S__:6090=wreywreywreywreypE',\n",
-       " 'S__:1125=四五〇〇四五〇〇四五〇〇四五〇〇EP']"
+       "['S__:9434=37739773977397736E',\n",
+       " 'S__:4466=一七八六五七八六五七八六五七八六四E',\n",
+       " 'S__:3602=14409440944094408E',\n",
+       " 'S__:7533=三〇一三五〇一三五〇一三五〇一三二E',\n",
+       " 'S__:6574=wywoiywoiywoiywoyE',\n",
+       " 'S__:8500=三四〇〇三四〇〇三四〇〇三四〇〇〇E',\n",
+       " 'S__:1665=6660666066606660EP',\n",
+       " 'S__:9414=三七六五九七六五九七六五九七六五六E']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%run common.ipynb\n",
-    "\n",
-    "[tokenizer.decode(i) for i in tokenizer.get_batch_data(prefix=False)[1]][:10]"
+    "[tokenizer.decode(i) for i in tokenizer.get_batch_data(prefix=False, batch_size=8)[1]][:10]"
    ]
   },
   {
@@ -39,54 +36,60 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/root/anaconda3/envs/pt2/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_cls = ModelCLS()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dbe0768c",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "78aaa57e10df45caa3d6addec8cbd021",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing....:   0%|          | 0/500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.203125\n",
-      "S__:2924=11697169716971696E 3\n",
-      "S__:7110=28442844284428440E 3\n",
-      "100 1.0\n",
-      "S__:3840=一五三六一五三六一五三六一五三六〇E 2\n",
-      "S__:1869=7476747674767476EP 0\n",
+      "0 0.25\n",
+      "S__:1919=柒陆柒陆柒陆柒陆柒陆柒陆柒陆柒陆EP 3\n",
+      "S__:5414=21658165816581656E 0\n",
+      "100 0.875\n",
+      "S__:9734=叁捌玖叁玖捌玖叁玖捌玖叁玖捌玖叁陆E 3\n",
+      "S__:6431=wtuwytuwytuwytuwrE 3\n",
       "200 1.0\n",
-      "S__:6465=wtiywtiywtiywtiypE 1\n",
-      "S__:8173=叁贰陆玖伍贰陆玖伍贰陆玖伍贰陆玖贰E 3\n",
+      "S__:1427=伍柒零捌伍柒零捌伍柒零捌伍柒零捌EP 3\n",
+      "S__:5887=贰叁伍伍零叁伍伍零叁伍伍零叁伍肆捌E 3\n",
       "300 1.0\n",
-      "S__:1550=陆贰零零陆贰零零陆贰零零陆贰零零EP 3\n",
-      "S__:8783=叁伍壹叁伍伍壹叁伍伍壹叁伍伍壹叁贰E 3\n",
+      "S__:4024=qypouypouypouypoyE 1\n",
+      "S__:6593=wyeuryeuryeuryeuwE 1\n",
       "400 1.0\n",
-      "S__:4071=壹陆贰捌伍陆贰捌伍陆贰捌伍陆贰捌肆E 3\n",
-      "S__:5895=二三五八二三五八二三五八二三五八〇E 2\n"
+      "S__:5774=贰叁零玖捌叁零玖捌叁零玖捌叁零玖陆E 3\n",
+      "S__:7867=31471147114711468E 0\n"
      ]
     }
    ],
    "source": [
+    "from tqdm.notebook import tqdm\n",
     "optimizer = torch.optim.AdamW(params=model_cls.parameters(), lr=1e-4)\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
     "\n",
-    "for epoch in range(500):\n",
-    "    label, input_ids, attention_mask = tokenizer.get_batch_data(prefix=False)\n",
+    "for epoch in tqdm(range(500), desc=\"Processing....\"):\n",
+    "    label, input_ids, attention_mask = tokenizer.get_batch_data(prefix=False, batch_size=64)\n",
     "    label = torch.LongTensor(label).to(device)\n",
     "    input_ids = torch.LongTensor(input_ids).to(device)\n",
     "    attention_mask = torch.LongTensor(attention_mask).to(device)\n",
@@ -109,13 +112,77 @@
     "model_cls.to('cpu')\n",
     "torch.save(model_cls, 'cls.model')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3840220e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce53d382",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7ab7819",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d83e89a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d5e5bfc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7a525f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed1a3f07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ade7432",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pt2]",
+   "display_name": "cu117-pt2.0",
    "language": "python",
-   "name": "conda-env-pt2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -127,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
