--- a/3.train_ppo.ipynb
+++ b/3.train_ppo.ipynb
@@ -529,7 +529,8 @@
     }
    ],
    "source": [
-    "for epoch in range(2000):\n",
+    "from tqdm.notebook import tqdm\n",
+    "for epoch in tqdm(range(2000), desc=\"Processing...\"):\n",
     "    label, question = get_question()\n",
     "    answer = get_answer(question)\n",
     "    reward = get_reward(question, answer, label)\n",
