--- a/common.ipynb
+++ b/common.ipynb
@@ -2,26 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "e1c27274",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['S数字:3929=15717571757175716E',\n",
-       " 'S小写:3616=一四四六五四四六五四四六五四四六四E',\n",
-       " 'S大写:6438=贰伍柒伍肆伍柒伍肆伍柒伍肆伍柒伍贰E',\n",
-       " 'S字母:5966=weiyyeiyyeiyyeiyrE',\n",
-       " 'S小写:7716=三〇八六七〇八六七〇八六七〇八六四E',\n",
-       " 'S大写:7307=贰玖贰叁零玖贰叁零玖贰叁零玖贰贰捌E',\n",
-       " 'S数字:9302=37211721172117208E',\n",
-       " 'S字母:7822=eqwoqqwoqqwoqqwiiE',\n",
-       " 'S小写:7413=二九六五四九六五四九六五四九六五二E',\n",
-       " 'S小写:6266=二五〇六六五〇六六五〇六六五〇六四E']"
+       "['S字母:1168=ryuwryuwryuwryuwEP',\n",
+       " 'S小写:1668=六六七二六六七二六六七二六六七二EP',\n",
+       " 'S数字:2899=11597159715971596E',\n",
+       " 'S数字:4190=16761676167616760E']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +28,7 @@
     "\n",
     "    def __init__(self):\n",
     "        self.vocab = {\n",
-    "            'mark': list('PSEU'),\n",
+    "            'mark': list('PSEU'), # P:padding, S:start, E:end, U:unknow\n",
     "            'number': list('0123456789'),\n",
     "            'letter': list('pqwertyuio'),\n",
     "            'chinese_lower': list('〇一二三四五六七八九'),\n",
@@ -42,8 +36,8 @@
     "            'other': list('数字大写小母:=_'),\n",
     "        }\n",
     "\n",
-    "        self.decoder = [j for i in self.vocab.values() for j in i]\n",
-    "        self.encoder = {j: i for i, j in enumerate(self.decoder)}\n",
+    "        self.decoder = [l for vocab in self.vocab.values() for l in vocab]\n",
+    "        self.encoder = {j: index for index, j in enumerate(self.decoder)}\n",
     "\n",
     "        self.label = {\n",
     "            'number': 0,\n",
@@ -56,39 +50,38 @@
     "    def decode(self, x):\n",
     "        return ''.join([self.decoder[i] for i in x])\n",
     "\n",
-    "    def get_data(self, prefix):\n",
-    "        #生成问题和答案\n",
-    "        question = random.randint(1000, 9999)\n",
-    "        answer = int(str(question) * 4) * 4\n",
-    "        #answer = question**8\n",
+    "    def get_data(self, prefix: bool) -> tuple[int, list[int]]:\n",
+    "        # 生成:问题和答案\n",
+    "        question = random.randint(1000, 9999)  # int 4110\n",
+    "        answer = int(str(question) * 4) * 4 # int 16441644164416440\n",
     "        \n",
-    "        question = list(str(question))\n",
-    "        answer = list(str(answer))\n",
+    "        question = list(str(question)) # ['4', '1', '1', '0']\n",
+    "        answer = list(str(answer))  # ['1', '6', '4', '4', '1', '6', '4', '4', '1', '6', '4', '4', '1', '6', '4', '4', '0']\n",
     "\n",
-    "        #随机label\n",
-    "        label = random.choice(list(self.label.keys()))\n",
+    "        # 生成：标签\n",
+    "        label = random.choice(list(self.label.keys())) # number, letter, chinese_lower, chinese_upper\n",
+    "        label_id = self.label[label] # 0, 1, 2, 3\n",
     "\n",
-    "        #根据label替换答案成其他字符集\n",
-    "        answer = [self.vocab[label][int(i)] for i in answer]\n",
+    "        # 改写：答案(四种答案可以随机选择)\n",
+    "        answer = [self.vocab[label][int(i)] for i in answer] # ['一', '六', '四', '四', '一', '六', '四', '四', '一', '六', '四', '四', '一', '六', '四', '四', '〇']\n",
     "\n",
-    "        #label转数字\n",
-    "        label = self.label[label]\n",
-    "\n",
-    "        #组合问题和答案\n",
+    "        # 组合:问题和答案\n",
     "        if prefix:\n",
-    "            prefix = list(self.prefix[label])\n",
+    "            prefix = list(self.prefix[label_id])\n",
     "        else:\n",
     "            prefix = list('__')\n",
-    "        token = prefix + [':'] + question + ['='] + answer\n",
+    "        \n",
+    "        tokens = prefix + [':'] + question + ['='] + answer # ['小', '写', ':', '4', '1', '1', '0', '=', '一', '六', '四', '四', '一', '六', '四', '四', '一', '六', '四', '四', '一', '六', '四', '四', '〇']\n",
     "\n",
-    "        #编码\n",
-    "        token = [self.encoder[i] for i in token]\n",
-    "        token = [self.encoder['S']] + token + [self.encoder['E']]\n",
+    "        # 编码\n",
+    "        token_ids = [self.encoder[t] for t in tokens]\n",
+    "        token_ids = [self.encoder['S']] + token_ids + [self.encoder['E']]\n",
+    "        # ['S', '小', '写', ':', '4', '1', '1', '0', '=', '一', '六', '四', '四', '一', '六', '四', '四', '一', '六', '四', '四', '一', '六', '四', '四', '〇', 'E']\n",
     "\n",
-    "        return label, token\n",
+    "        return label_id, token_ids\n",
     "\n",
-    "    def get_batch_data(self, prefix):\n",
-    "        data = [self.get_data(prefix=prefix) for _ in range(64)]\n",
+    "    def get_batch_data(self, prefix:bool, batch_size: int)->tuple[list, list, list]:\n",
+    "        data = [self.get_data(prefix=prefix) for _ in range(batch_size)]\n",
     "\n",
     "        label = [i[0] for i in data]\n",
     "        token = [i[1] for i in data]\n",
@@ -100,25 +93,54 @@
     "            #编码\n",
     "            token = [[self.encoder[j] for j in i] for i in text]\n",
     "\n",
-    "        lens = max([len(i) for i in token])\n",
+    "        max_len_in_batch = max([len(i) for i in token])\n",
     "\n",
     "        input_ids = []\n",
     "        attention_mask = []\n",
     "        for i in token:\n",
-    "            attention_mask.append([1] * len(i) + [0] * (lens - len(i)))\n",
-    "            input_ids.append(i + [self.encoder['P']] * (lens - len(i)))\n",
+    "            attention_mask.append([1] * len(i) + [0] * (max_len_in_batch - len(i)))\n",
+    "            input_ids.append(i + [self.encoder['P']] * (max_len_in_batch - len(i)))\n",
     "\n",
     "        return input_ids, attention_mask\n",
     "\n",
     "\n",
     "tokenizer = Tokenizer()\n",
     "\n",
-    "[tokenizer.decode(i) for i in tokenizer.get_batch_data(prefix=True)[1]][:10]"
+    "# decode input_ids\n",
+    "[tokenizer.decode(i) for i in tokenizer.get_batch_data(prefix=True, batch_size=4)[1]][:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
+   "id": "60f86596",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['S__:7082=wieepieepieepiewiE',\n",
+       " 'S__:8723=三四八九五四八九五四八九五四八九二E',\n",
+       " 'S__:4814=qowtuowtuowtuowtyE',\n",
+       " 'S__:1892=7568756875687568EP',\n",
+       " 'S__:4539=18157815781578156E',\n",
+       " 'S__:3460=13841384138413840E',\n",
+       " 'S__:2402=玖陆零捌玖陆零捌玖陆零捌玖陆零捌EP',\n",
+       " 'S__:2138=ittwittwittwittwEP']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[tokenizer.decode(i) for i in tokenizer.get_batch_data(prefix=False, batch_size=8)[1]][:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "e242caa8",
    "metadata": {},
    "outputs": [
@@ -128,22 +150,20 @@
        "'cuda'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import torch\n",
-    "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "\n",
     "device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "17208b2d",
    "metadata": {},
    "outputs": [],
@@ -178,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "a23b28dd",
    "metadata": {},
    "outputs": [],
@@ -274,9 +294,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pt2]",
+   "display_name": "cu117-pt2.0",
    "language": "python",
-   "name": "conda-env-pt2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -288,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
